diesel_compile_tests/tests/fail/insert_statement_does_not_support_returning_methods_on_sqlite.stderr
error[E0277]: `ReturningClause<(columns::id, columns::name)>` is no valid SQL fragment for the `Sqlite` backend
    --> tests/fail/insert_statement_does_not_support_returning_methods_on_sqlite.rs:29:29
     |
  LL |         .get_result::<User>(&mut connection);
     |          ----------         ^^^^^^^^^^^^^^^ the trait `QueryFragment<Sqlite, DoesNotSupportReturningClause>` is not implemented for `ReturningClause<(columns::id, columns::name)>`
     |          |
     |          required by a bound introduced by this call
     |
     = note: this usually means that the `Sqlite` database system does not support 
             this SQL syntax
help: the following other types implement trait `QueryFragment<DB, SP>`
    --> DIESEL/diesel/diesel/src/query_builder/returning_clause.rs
     |
  LL | / impl<Expr, DB> QueryFragment<DB> for ReturningClause<Expr>
  LL | | where
  LL | |     DB: Backend,
  LL | |     Self: QueryFragment<DB, DB::ReturningClause>,
     | |_________________________________________________^ `ReturningClause<Expr>` implements `QueryFragment<DB>`
...
  LL | / impl<Expr, DB>
  LL | |     QueryFragment<DB, crate::backend::sql_dialect::returning_clause::PgLikeReturningClause>
  LL | |     for ReturningClause<Expr>
  LL | | where
...    |
  LL | |     >,
  LL | |     Expr: QueryFragment<DB>,
     | |____________________________^ `ReturningClause<Expr>` implements `QueryFragment<DB, PgLikeReturningClause>`
     |
    ::: DIESEL/diesel/diesel/src/sqlite/query_builder/returning.rs
     |
   LL | / impl<Expr, DB> QueryFragment<DB, SqliteReturningClause> for ReturningClause<Expr>
   LL | | where
   LL | |     DB: Backend<ReturningClause = SqliteReturningClause>,
  LL | |     Expr: QueryFragment<DB>,
     | |____________________________^ `ReturningClause<Expr>` implements `QueryFragment<DB, sqlite::backend::SqliteReturningClause>`
     = note: required for `ReturningClause<(columns::id, columns::name)>` to implement `QueryFragment<Sqlite>`
     = note: 1 redundant requirement hidden
     = note: required for `InsertStatement<table, ValuesClause<(...,), ...>, ..., ...>` to implement `QueryFragment<Sqlite>`
     = note: required for `InsertStatement<table, ValuesClause<(...,), ...>>` to implement `LoadQuery<'_, SqliteConnection, User>`
note: required by a bound in `get_result`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
     |        ---------- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
  
     
error[E0277]: `ReturningClause<columns::name>` is no valid SQL fragment for the `Sqlite` backend
    --> tests/fail/insert_statement_does_not_support_returning_methods_on_sqlite.rs:35:31
     |
  LL |         .get_result::<String>(&mut connection);
     |          ----------           ^^^^^^^^^^^^^^^ the trait `QueryFragment<Sqlite, DoesNotSupportReturningClause>` is not implemented for `ReturningClause<columns::name>`
     |          |
     |          required by a bound introduced by this call
     |
     = note: this usually means that the `Sqlite` database system does not support 
             this SQL syntax
help: the following other types implement trait `QueryFragment<DB, SP>`
    --> DIESEL/diesel/diesel/src/query_builder/returning_clause.rs
     |
  LL | / impl<Expr, DB> QueryFragment<DB> for ReturningClause<Expr>
  LL | | where
  LL | |     DB: Backend,
  LL | |     Self: QueryFragment<DB, DB::ReturningClause>,
     | |_________________________________________________^ `ReturningClause<Expr>` implements `QueryFragment<DB>`
...
  LL | / impl<Expr, DB>
  LL | |     QueryFragment<DB, crate::backend::sql_dialect::returning_clause::PgLikeReturningClause>
  LL | |     for ReturningClause<Expr>
  LL | | where
...    |
  LL | |     >,
  LL | |     Expr: QueryFragment<DB>,
     | |____________________________^ `ReturningClause<Expr>` implements `QueryFragment<DB, PgLikeReturningClause>`
     |
    ::: DIESEL/diesel/diesel/src/sqlite/query_builder/returning.rs
     |
   LL | / impl<Expr, DB> QueryFragment<DB, SqliteReturningClause> for ReturningClause<Expr>
   LL | | where
   LL | |     DB: Backend<ReturningClause = SqliteReturningClause>,
  LL | |     Expr: QueryFragment<DB>,
     | |____________________________^ `ReturningClause<Expr>` implements `QueryFragment<DB, sqlite::backend::SqliteReturningClause>`
     = note: required for `ReturningClause<columns::name>` to implement `QueryFragment<Sqlite>`
     = note: 1 redundant requirement hidden
     = note: required for `InsertStatement<table, ValuesClause<(...,), ...>, ..., ...>` to implement `QueryFragment<Sqlite>`
     = note: required for `InsertStatement<table, ValuesClause<(...,), ...>, ..., ...>` to implement `LoadQuery<'_, SqliteConnection, std::string::String>`
note: required by a bound in `get_result`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
     |        ---------- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
  
     For more information about this error, try `rustc --explain E0277`.
